# glrt

./: .gitmodules  CMakeLists.txt  README.md
include/KHR/: khrplatform.h
include/glad/: gl.h
include/glrt/: endl.h  window.h
source/: fragment.glsl  gl.c  main.c
